# DRYNet

./: .gitignore  README.md  pyproject.toml
capybara/: __init__.py  config.py  losses.py  model.py
configs/: default.yaml  default_procap.yaml  default_procapnet.yaml
drynet/: __init__.py  layers.py  model.py
examples/: smoke_test.py
examples/procap/: README.md  benchmark_procap.ipynb  count_calibration.ipynb  count_calibration_analysis.py  data.py  evaluate.py  file_config.py  finetune_count.py  performance_metrics.py  procapnet.py  run_evaluate.sh  run_finetune_count.sh  run_train_capy.sh  run_train_procapnet.sh  submit_evaluate_all_folds.sh  submit_finetune_all_folds.sh  submit_train_all_folds_capy.sh  submit_train_all_folds_procapnet.sh  train_capy.py  train_procapnet.py  train_utils.py
