[project]
name = "capybara"
version = "0.1.0"
description = "CAPYBARA: Count And Profile Y-net for Base-resolution Attribution, Regulatory design, and Allelic effect prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
train = [
    "pyyaml>=6.0.3",
]
