[project]
name = "capybara"
version = "0.1.0"
description = "CAPYBARA: Count And Profile Y-net for Base-resolution Attribution, Regulatory design, and Allelic effect prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
train = [
    "pyyaml>=6.0.3",
]
procap = [
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pybigwig>=0.3.25",
    "pyfaidx>=0.9.0.4",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]

[tool.ruff]
line-length = 100
